# real-routing-nco

./: .gitignore  LICENSE  MATRIX_FUSION_ABLATION.md  README.md  generate_data.py  pyproject.toml  test.py  test_config.py  test_lazy_generator.py  test_matrix_fusion.py  train.py
configs/callbacks/: learning_rate_monitor.yaml  speed_monitor.yaml
configs/env/: atsp.yaml  rcvrp.yaml  rcvrptw.yaml
configs/experiment/: matnet.yaml  rrnet.yaml  rrnet_heuristic.yaml  rrnet_naive.yaml
configs/hydra/: default.yaml
configs/logger/: none.yaml
configs/model/: matnet.yaml  rrnet.yaml
configs/trainer/: default.yaml
data/dataset/: splited_cities_list.json
data_generation/: 100cities.json  README.md
data_generation/utilities/: __init__.py  city_boundary_calculator.py  city_bounding_coordinates.json  create_dataset.py  haversine.py  render.py  road_points_sampler.py
osrm/: 100cities.sh  start_sample.sh
rrnco/: utils.py
rrnco/baselines/MatNet/: decoder.py  decoding.py  encoder.py  model.py  policy.py
rrnco/baselines/lkh/: eval_atsp.py
rrnco/baselines/routefinder/: __init__.py  encoder.py  model.py  policy.py  reward_normalization.py  utils.py
rrnco/baselines/vrp_solvers/: lkh.py  ortools.py  pyvrp.py  utils.py
rrnco/envs/atsp/: __init__.py  env.py  generator.py  generator_lazy.py  render.py  sampler.py
rrnco/envs/rcvrp/: __init__.py  env.py  generator.py  generator_lazy.py  local_search.py  render.py  sampler.py
rrnco/envs/rmtvrp/: __init__.py  env.py  generator.py  generator_lazy.py  render.py  sampler.py  selectstartnodes.py  utils.py
rrnco/models/: __init__.py  decoder.py  decoding.py  encoder.py  policy.py  rl.py
rrnco/models/env_embeddings/: __init__.py  context.py  rcvrp.py
rrnco/models/nn/: attn_freenet.py
scripts/: download_hf.py  generate_data.py  generate_data_optimized.py
tests/: test.py
(+110 files in other folders)
